<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.0.0</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>no.idporten.eudiw</groupId>
	<artifactId>eudiw-verifier-demo</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>eudiw-verifier-demo</name>
	<description>EUDIW demo verifier</description>
	<properties>
		<java.version>25</java.version>
		<maven.compiler.proc>full</maven.compiler.proc>
		<kotlin.version>2.2.21</kotlin.version>
        <kotlinx-serialization-json-jvm.version>1.9.0</kotlinx-serialization-json-jvm.version>
        <idporten.keystore.version>1.1.1</idporten.keystore.version>
		<idporten-actuator.version>2.0.0</idporten-actuator.version>
		<idporten-access-log.version>2.8.2</idporten-access-log.version>
		<opentelemetry-instrumentation-api.version>1.56.0</opentelemetry-instrumentation-api.version>
		<nimbus-jose-jwt.version>10.6</nimbus-jose-jwt.version>
		<waltid-mdoc-credentials-jvm.version>0.15.1</waltid-mdoc-credentials-jvm.version>
        <waltid-sdjwt-jvm.version>0.15.1</waltid-sdjwt-jvm.version>
		<cose-java.version>1.1.1-SNAPSHOT</cose-java.version>
		<cbor.version>1.20</cbor.version>
		<bcprov-lts8on.version>2.73.9</bcprov-lts8on.version>
		<zxing.javase.version>3.5.4</zxing.javase.version>
		<lombok.version>1.18.42</lombok.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-cache</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-redis</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.session</groupId>
			<artifactId>spring-session-data-redis</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.session</groupId>
			<artifactId>spring-session-core</artifactId>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
		</dependency>
        <dependency>
            <groupId>no.idporten</groupId>
            <artifactId>idporten-lib-keystore-spring-boot</artifactId>
            <version>${idporten.keystore.version}</version>
        </dependency>
        <dependency>
			<groupId>no.idporten.logging</groupId>
			<artifactId>idporten-access-log-spring-boot-3-starter</artifactId>
			<version>${idporten-access-log.version}</version>
		</dependency>
		<dependency>
			<groupId>io.opentelemetry</groupId>
			<artifactId>opentelemetry-api</artifactId>
			<version>${opentelemetry-instrumentation-api.version}</version>
		</dependency>
		<dependency>
			<groupId>com.nimbusds</groupId>
			<artifactId>nimbus-jose-jwt</artifactId>
			<version>${nimbus-jose-jwt.version}</version>
		</dependency>
		<dependency>
			<groupId>net.minidev</groupId>
			<artifactId>json-smart</artifactId>
		</dependency>
		<dependency>
			<groupId>com.google.zxing</groupId>
			<artifactId>javase</artifactId>
			<version>${zxing.javase.version}</version>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${lombok.version}</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>no.idporten.actuator</groupId>
			<artifactId>idporten-actuator-starter</artifactId>
			<version>${idporten-actuator.version}</version>
		</dependency>

		<dependency>
			<groupId>id.walt.mdoc-credentials</groupId>
			<artifactId>waltid-mdoc-credentials-jvm</artifactId>
			<version>${waltid-mdoc-credentials-jvm.version}</version>
		</dependency>
        <dependency>
            <groupId>id.walt.sdjwt</groupId>
            <artifactId>waltid-sdjwt-jvm</artifactId>
            <version>${waltid-sdjwt-jvm.version}</version>
        </dependency>
		<dependency>
			<groupId>org.cose</groupId>
			<artifactId>cose-java</artifactId>
			<version>${cose-java.version}</version>
		</dependency>
		<dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bcprov-lts8on</artifactId>
			<version>${bcprov-lts8on.version}</version>
		</dependency>
		<dependency>
			<groupId>com.authlete</groupId>
			<artifactId>cbor</artifactId>
			<version>${cbor.version}</version>
			<exclusions>
				<exclusion>
					<groupId>org.bouncycastle</groupId>
					<artifactId>bcpkix-jdk18on</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.bouncycastle</groupId>
					<artifactId>bcprov-jdk18on</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.bouncycastle</groupId>
					<artifactId>bcutil-jdk18on</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.jetbrains.kotlin</groupId>
			<artifactId>kotlin-stdlib-jdk8</artifactId>
			<version>${kotlin.version}</version>
		</dependency>
		<dependency>
			<groupId>org.jetbrains.kotlinx</groupId>
			<artifactId>kotlinx-datetime-jvm</artifactId>
			<version>0.7.1-0.6.x-compat</version>
		</dependency>
		<dependency>
			<groupId>org.jetbrains.kotlinx</groupId>
			<artifactId>kotlinx-serialization-bom</artifactId>
			<version>1.9.0</version>
			<type>pom</type>
		</dependency>
        <dependency>
            <groupId>org.jetbrains.kotlinx</groupId>
            <artifactId>kotlinx-serialization-json-jvm</artifactId>
            <version>${kotlinx-serialization-json-jvm.version}</version>
        </dependency>
		<dependency>
			<groupId>org.jetbrains.kotlinx</groupId>
			<artifactId>kotlinx-coroutines-core</artifactId>
			<version>1.10.2</version>
			<type>pom</type>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.jetbrains.kotlin</groupId>
				<artifactId>kotlin-maven-plugin</artifactId>
				<version>${kotlin.version}</version>
				<executions>
					<execution>
						<id>compile</id>
						<phase>compile</phase>
						<goals>
							<goal>compile</goal>
						</goals>
						<configuration>
							<sourceDirs>
								<source>src/main/java</source>
								<source>target/generated-sources/annotations</source>
								<source>src/test/kotlin</source>
							</sourceDirs>
						</configuration>
					</execution>
					<execution>
						<id>test-compile</id>
						<phase>test-compile</phase>
						<goals>
							<goal>test-compile</goal>
						</goals>
						<configuration>
							<sourceDirs>
								<source>src/test/java</source>
								<source>target/generated-test-sources/test-annotations</source>
							</sourceDirs>
						</configuration>
					</execution>
				</executions>
				<configuration>
					<jvmTarget>24</jvmTarget>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>build-info</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>central</id>
			<url>https://repo1.maven.org/maven2</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>github</id>
			<name>GitHub felleslosninger Apache Maven Packages</name>
			<url>https://maven.pkg.github.com/felleslosninger/.github</url>
		</repository>
		<repository>
			<id>waltid-repository-releases</id>
			<name>walt.id Release Repository</name>
			<url>https://maven.waltid.dev/releases</url>
		</repository>
		<repository>
			<id>waltid-repository-snapshots</id>
			<name>walt.id Snapshot Repository</name>
			<url>https://maven.waltid.dev/snapshots</url>
		</repository>
	</repositories>

</project>
